--- a/notebooks/Vaklodingen2EE.ipynb
+++ b/notebooks/Vaklodingen2EE.ipynb
@@ -437,7 +437,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# following is just for testing."
+   ]
   },
   {
    "cell_type": "code",
