--- a/notebooks/Vaklodingen2EE.ipynb
+++ b/notebooks/Vaklodingen2EE.ipynb
@@ -321,8 +321,8 @@
    ],
    "source": [
     "\n",
-    "cmd\n",
-    "subprocess.call('gsutil cp ../output/bathymetry_000.tif gs://eo-bathymetry-rws/vaklodingen/bathymetry_000.tif', shell=True)\n",
+    "#cmd\n",
+    "#subprocess.call('gsutil cp ../output/bathymetry_000.tif gs://eo-bathymetry-rws/vaklodingen/bathymetry_000.tif', shell=True)\n",
     "#ccc=r\"dir\"\n",
     "#ccc\n",
     "#subprocess.call(ccc)"
