move to eepackages

--- a/notebooks/rws-bathymetry/intertidal_bathymetry.ipynb
+++ b/notebooks/rws-bathymetry/intertidal_bathymetry.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a2ff4261",
-   "metadata": {},
    "source": [
     "# Intertidal Bathymetry\n",
     "Tests intertidal bathymetry function of `bathymetry.py`. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f1ce644e",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -26,47 +22,30 @@
     "\n",
     "sys.path.append(str(Path.cwd().parent.parent))\n",
     "\n",
-    "from eobathymetry import bathymetry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "c673de3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Map = geemap.Map(center=(38.499573, -8.89696), zoom=13)\n",
-    "bounds = ee.Geometry(Polygon([[\n",
-    "    (-8.9793574609375, 38.474681402665055),\n",
-    "    (-8.8145625390625, 38.474681402665055),\n",
-    "    (-8.8145625390625, 38.5244559986627),\n",
-    "    (-8.9793574609375, 38.5244559986627),\n",
-    "    (-8.9793574609375, 38.474681402665055),\n",
-    "]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "e8b9293a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "161e6abdeedf45f0b005cdfc90b93eb9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[38.499573, -8.89696], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
+    "from eepackages.applications import bathymetry"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "Map = geemap.Map(center=(52.97, 4.74), zoom=11)\n",
+    "bounds = ee.Geometry(Polygon([[\n",
+    "    (4.574518432617185, 52.91662291147939),\n",
+    "    (4.90548156738281, 52.91662291147939),\n",
+    "    (4.90548156738281, 53.02331125248889),\n",
+    "    (4.574518432617185, 53.02331125248889),\n",
+    "    (4.574518432617185, 52.91662291147939)\n",
+    "]]))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "source": [
     "sdb = bathymetry.Bathymetry()\n",
     "\n",
@@ -86,8 +65,8 @@
     "    filter_masked=False, \n",
     "    # filterMasked: true, \n",
     "    # filterMaskedFraction: 0.5,\n",
-    "    skip_scene_boundary_fix=True,\n",
-    "    skip_neighborhood_search=True,\n",
+    "    skip_scene_boundary_fix=False,\n",
+    "    skip_neighborhood_search=False,\n",
     "    neighborhood_search_parameters={\"erosion\": 0, \"dilation\": 0, \"weight\": 50},\n",
     "    bounds_buffer=0,\n",
     "    water_index_min=-0.05,\n",
@@ -95,23 +74,39 @@
     "\n",
     "    # lowerCdfBoundary: 45,\n",
     "    # upperCdfBoundary: 50\n",
-    ")\n",
+    ")  # .reproject(ee.Projection(\"EPSG:3857\").atScale(90))\n",
     "\n",
     "min = 0.04\n",
     "max = 0.2\n",
     "Map.addLayer(sdb.composite, { \"min\": min, \"max\": max }, 'red-green-blue')\n",
     "Map"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c7d4e5d9c6a403ca9ee28e19cae15b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[52.97, 4.74], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "111437d7",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "Map.addLayer(image, {\"min\": sdb.waterIndexMin, \"max\": sdb.waterIndexMax}, 'water indices', False)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
